--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/Intellicode/react-native-bridgeable-webview/issues"
   },
-  "homepage": "https://github.com/Intellicode/react-native-bridgeable-webview#readme"
+  "homepage": "https://github.com/Intellicode/react-native-bridgeable-webview#readme",
+  "devDependencies": {
+    "react-native": "^0.5.0"
+  },
+  "peerDependencies": {
+    "react-native": "^0.5.0"
+  }
 }
