--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-native-bridgeable-webview",
   "version": "0.0.1",
   "description": "A react-native webview with bridge to react-native code",
-  "main": "index.js",
+  "main": "BridgeableWebView.ios.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
